raspberryPi_Code/ros_ws/log/build_2024-09-21_20-54-18/puckPack/stderr.log
Sorry: IndentationError: expected an indented block after 'if' statement on line 103 (thinker.py, line 105)
  File "/home/asme/ros_ws/install/puckPack/lib/python3.12/site-packages/puckPack/rpiCamera.py", line 33
    elif == 1: # blue detect 
         ^^
SyntaxError: invalid syntax

